@@ -2,8 +2,10 @@ package tfar.davespotioneering.datagen.data;
 
 import com.google.common.collect.ImmutableList;
 import com.mojang.datafixers.util.Pair;
-import net.minecraft.data.DataGenerator;
+import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.LootTableProvider;
+import net.minecraft.data.loot.packs.*;
+import net.minecraft.world.level.storage.loot.BuiltInLootTables;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSet;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 import net.minecraft.world.level.storage.loot.LootTable;
@@ -12,22 +14,22 @@ import net.minecraft.resources.ResourceLocation;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 
 public class ModLootTableProvider extends LootTableProvider {
-    public ModLootTableProvider(DataGenerator dataGeneratorIn) {
-        super(dataGeneratorIn);
+
+    public ModLootTableProvider(PackOutput pOutput, Set<ResourceLocation> pRequiredTables, List<SubProviderEntry> pSubProviders) {
+        super(pOutput, pRequiredTables, pSubProviders);
     }
 
-    private final List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> tablePairs = ImmutableList.of(Pair.of(ModBlockLoot::new, LootContextParamSets.BLOCK));
+    public static LootTableProvider create(PackOutput pOutput) {
+        return new ModLootTableProvider(pOutput, BuiltInLootTables.all(), List.of(new LootTableProvider.SubProviderEntry(() -> new ModBlockLoot(), LootContextParamSets.BLOCK)));
+    }
 
     @Override
     protected void validate(Map<ResourceLocation, LootTable> map, ValidationContext validationtracker) {
-    }
-
-    protected List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
-        return tablePairs;
     }
 }
